@@ -1,0 +1,45 @@
+<html>
+    <head>
+        <title>Test Page</title>
+    </head>
+    <body>
+        <form action="http://localhost/" method="GET">
+            <select type="select" name="select1">
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+                <option value="4"></option>
+            </select>
+            <select type="select" name="select2">
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+                <option value="4"></option>
+            </select>
+            <select type="select" name="select3">
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+                <option value="4"></option>
+            </select>
+            <select type="select" name="select4">
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+                <option value="4"></option>
+            </select>
+            <select type="select" name="multiselect1" multiple="multiple">
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+                <option value="4"></option>
+            </select>
+            <select type="select" name="multiselect2" multiple="multiple">
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+                <option value="4"></option>
+            </select>
+        </form>
+    </body>
+</html>
